-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0 , 5.2.0, 5.3.0, 5.4.0, 5.5.0
-
None
-
d7306737f9b89941ca5a94e3f7a2e6bae073eb81
This qml method is documented, but does not show up in the QCH. See http://doc.qt.io/qt-5/qml-qtqml-instantiator.html
| For Gerrit Dashboard: QTBUG-47438 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 123172,4 | qdoc: Instantiator::objectAt now appear in docs | dev | qt/qtbase | Status: MERGED | +2 | 0 |